--- a/src/components/Regforms/Regforms.scss
+++ b/src/components/Regforms/Regforms.scss
@@ -1,4 +1,4 @@
-@import '../../_variables';
+@import '../../styles/_variables';
 
 .okBtn{
   background-color: $background-color-2;
@@ -8,8 +8,17 @@
 .okBtn:hover,
 .okBtn:focus{
   background-color: $color-2;
-  border-color: $background-color-2 !important;
-  color: $background-color-2 !important;
+  color: $background-color-2;
+}
+.confirmBtn{
+  background-color: $color-3;
+  border-color: $color-3;
+  color: $color-2;
+}
+.confirmBtn:hover,
+.confirmBtn:focus{
+  color: $color-3;
+  background-color: $color-2;
 }
 .form-control:focus{
   box-shadow: none;
