--- a/src/components/Star/Star.scss
+++ b/src/components/Star/Star.scss
@@ -1,19 +1,26 @@
-@import '../../_variables';
+@import '../../styles/_variables';
 
 .text-muted{
-  color: $color-6 !important;
+  color: $color-6;
   text-align: right !important;
-  font-size: 2rem !important;
+  font-size: 2.5rem ;
 }
 #star{
-  margin: 10px 20px 0 0;
   position: relative;
   left: 80%;
   top: 3%;
   width: 10%;
 }
-@media (max-width: 992px){
+@media (max-width: 767px){
   .text-muted{
-    font-size: 1.5rem !important;
+    font-size: 2rem;
+  }
+}
+@media (max-width: 500px){
+  .text-muted{
+    font-size: 1.5rem;
+  }
+  #star{
+    left: 77%;
   }
 }
