--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,4 +1,4 @@
-@import '../../_variables';
+@import '../../styles/_variables';
 
 .profile-wrapper{
   display: flex;
@@ -11,9 +11,67 @@
 .responsive{
   min-width: 85%;
 }
-// .profile-name{
-//   display: flex;
-// }
+.profile-title-wrapper{
+  width: 90%;
+}
 .wishes-image{
   width: 30px;
+}
+.profile-name-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.btn-my-danger{
+  background-color: none;
+  border: 1px solid $background-color-1;
+}
+.btn-my-danger:hover,
+.btn-my-danger:focus{
+  background-color: $background-color-1;
+  color: $color-2;
+}
+.my-title{
+  width: 85%;
+}
+.main-title{
+  text-align: center;
+}
+.divider{
+  width: 90%;
+  height: 1px;
+  background-color: $color-1;
+  opacity: 0.2;
+}
+.tr-hover:hover,
+.tr-hover:focus{
+  background-color: $color-5 !important;
+}
+.txt-right{
+  text-align: right;
+}
+@media (max-width: 550px){
+  .main-title{
+    font-size: 1.5rem;
+  }
+  .wishes-image{
+    width: 20px;
+  }
+  .table-title{
+    font-size: 1.2rem !important;
+  }
+  .profile-name{
+    font-size: 1.1rem !important;
+  }
+  .my-title{
+    width: 95%;
+  }
+  .btn-my-danger{
+    padding: 3px 7px;
+    font-size: 0.8rem;
+  }
+  .profile-title-wrapper{
+    width: 100%;
+  }
 }
