fix: prettier + backend url updagte

--- a/src/components/ShoppingCart/ShoppingCart.scss
+++ b/src/components/ShoppingCart/ShoppingCart.scss
@@ -25,7 +25,7 @@
   text-decoration: underline;
 }
 .main-page-link:hover{
-  color: rgb(233, 218, 190);
+  color: $color-6;
 }
 .table{
   width: 80%;
