--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,5 +1,7 @@
 @import '../../styles/_variables';
 
 .spinner-wrapper{
-  @include center()
+  @include center();
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
