--- a/src/components/OrderDailog/OrderDailog.scss
+++ b/src/components/OrderDailog/OrderDailog.scss
@@ -6,3 +6,12 @@
 .modal-content{
   padding: 18px;
 }
+.modal-backdrop{
+  opacity: 1 !important;
+  position: absolute;
+  max-width: 1215px;
+  top: 50%;
+  left:50%;
+  transform:translate(-50%, -50%); 
+  background-color: rgb(185, 226, 226);
+}
