--- a/src/components/Payment/Payment.scss
+++ b/src/components/Payment/Payment.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 66vh;
+  height: calc(100vh - 441px);
 }
 .payment_wrapper{
   display: flex;
