--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 66vh;
+  height: calc(100vh - 441px)
 }
 .about_wrapper{
   display: flex;
